# egg-herbie

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  deploy.sh  egg-interface.rkt  info.rkt  main.rkt  to-egg-pattern.rkt
.github/workflows/: build.yml  publish.yml
compiled/: egg-interface_rkt.dep  egg-interface_rkt.zo  info_rkt.dep  info_rkt.zo  main_rkt.dep  main_rkt.zo  to-egg-pattern_rkt.dep  to-egg-pattern_rkt.zo
egg-math/: Cargo.toml
egg-math/src/: eggmath.rs  lib.rs  rules.rs
egg-math/tests/: tests.rs
src/: eggmath.rs  lib.rs  math.rs  rules.rs
tests/: tests.rs
