[package]
name = "egg-math"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"

[dependencies]
egg = { git = "https://github.com/mwillsey/egg" }
log = "0.4"
indexmap = "1.1"
libc = "0.2.0"
lazy_static = "1.4.0"


num-rational = "0.2.2"
num-bigint = "0.2.2"
num-traits = "0.2.8"
ordered-float = "1"
env_logger = "0.6"


[features]
parent-pointers = ["egg/parent-pointers"]

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]


[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
