[package]
name = "egg-herbie"
version = "0.2.0"
authors = [ "Oliver Flatt <oflatt@gmail.com>", "Max Willsey <me@mwillsey.com>" ]
edition = "2018"

[dependencies]
egg = { git = "https://github.com/mwillsey/egg", rev = "84cfa2b6d4c5162921779ec24d696ae672efd50c" }
log = "0.4"
indexmap = "1.1"
libc = "0.2.0"
lazy_static = "1.4.0"
smallvec = "0.6"


num-rational = "0.2.2"
num-bigint = "0.2.2"
num-traits = "0.2.8"
ordered-float = "1"
env_logger = "0.6"


[features]
parent-pointers = ["egg/parent-pointers"]

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]


[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
